ahora si esta listo modulos Producto, Proveedor, transaccion(Inventario) con editar, eliminar y crear, con validaciones

--- a/sistema_erp/proveedores/templates/proveedores/proveedor_list.html
+++ b/sistema_erp/proveedores/templates/proveedores/proveedor_list.html
@@ -19,7 +19,7 @@
     <div class="card">
       <div class="card-header d-flex justify-content-between align-items-center">
         <span>Listado de Proveedores</span>
-        
+        <a href="{% url 'proveedor_agregar' %}" class="btn btn-success">+ Crear proveedor</a>
       </div>
 
       <div class="card-body">
