--- a/sistema_erp/productos/templates/productos/product_detail.html
+++ b/sistema_erp/productos/templates/productos/product_detail.html
@@ -51,9 +51,15 @@
             <p><strong>Categoría:</strong> {{ producto.get_categoria_display }}</p>
             <p><strong>Precio:</strong> ${{ producto.precio }}</p>
             <p>
-              <strong>Stock actual:</strong> 
-              {{ producto.stock_actual }} 
-              <span class="text-uppercase text-muted">({{ producto.stock }})</span>
+            <strong>Stock actual:</strong>
+            {{ producto.stock_actual }}
+            {% if producto.stock == 'ALTO' %}
+                <span class="badge bg-success ms-1">ALTO</span>
+            {% elif producto.stock == 'BAJO' %}
+                <span class="badge bg-danger ms-1">BAJO</span>
+            {% else %}
+                <span class="badge bg-secondary ms-1">N/A</span>
+            {% endif %}
             </p>
           </div>
           <div class="col-md-6">
