--- a/sistema_erp/productos/templates/productos/product_list.html
+++ b/sistema_erp/productos/templates/productos/product_list.html
@@ -40,7 +40,7 @@
     <div class="card">
       <div class="card-header d-flex justify-content-between align-items-center">
         <span>Listado de Productos</span>
-        
+        <a href="{% url 'producto_agregar' %}" class="btn btn-success">+ Crear producto</a>
       </div>
 
       <div class="card-body">
