--- a/sistema_erp/transacciones/templates/transacciones/transaccion_list.html
+++ b/sistema_erp/transacciones/templates/transacciones/transaccion_list.html
@@ -18,7 +18,7 @@
     <div class="card">
       <div class="card-header d-flex justify-content-between align-items-center">
         <span>Listado de Movimientos de Inventario</span>
-        <a href="#" class="text-white small text-decoration-none">Gestión de transacciones</a>
+        <a href="{% url 'crear_transaccion' %}" class="btn btn-success">+ Crear Movimiento</a>
       </div>
 
       <div class="card-body">
